# KAN-networks

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
kan/: kan.ipynb  nn.py
