[tool.poetry]
name = "kan"
version = "0.1.0"
description = ""
authors = ["Rafael Aguilher da Costa <rafael.aguilher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.0"
torch = "^2.3.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
